// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContentArea renders as expected 1`] = `
<section
  className="content-container"
>
  <EmptyContent />
</section>
`;

exports[`ContentArea renders content items if there is 3 items 1`] = `
<section
  className="content-container"
>
  <ErrorBoundary
    key="482560"
    showOnError={
      <figure
        className="content-item"
      >
        <img
          className="content-item_img"
          src="./../../public/img/cube.gif"
        />
        <figcaption
          className="content-item__description"
        >
          <span
            className="content-item_title"
          >
            <b>
              Loading...
            </b>
          </span>
        </figcaption>
      </figure>
    }
  >
    <ContentItem
      date="2017-01-01"
      genres={
        Array [
          "Romance",
          "Drama",
        ]
      }
      img="https://image.tmdb.org/t/p/w500/jPxatX1ReNULfOOZEDuc5o6T9nT.jpg"
      key="482560"
      overview="People who are on fishing boats in a secluded countryside wake up to their deepest desires.  Money, sex, power ... In the uninhabited desert where there is endless desire, it turns "
      title="Covet: The Island of Desire"
      updateFilmPanel={[Function]}
    />
  </ErrorBoundary>
  <ErrorBoundary
    key="299534"
    showOnError={
      <figure
        className="content-item"
      >
        <img
          className="content-item_img"
          src="./../../public/img/cube.gif"
        />
        <figcaption
          className="content-item__description"
        >
          <span
            className="content-item_title"
          >
            <b>
              Loading...
            </b>
          </span>
        </figcaption>
      </figure>
    }
  >
    <ContentItem
      date="2019-04-24"
      genres={
        Array [
          "Action",
          "Adventure",
          "Science Fiction",
        ]
      }
      img="https://image.tmdb.org/t/p/w500/aMETsaNNcDc6g5ZatQtVbySnSaA.jpg"
      key="299534"
      overview="The culmination of the Marvel Cinematic Universe."
      title="Untitled Avengers"
      updateFilmPanel={[Function]}
    />
  </ErrorBoundary>
  <ErrorBoundary
    key="320288"
    showOnError={
      <figure
        className="content-item"
      >
        <img
          className="content-item_img"
          src="./../../public/img/cube.gif"
        />
        <figcaption
          className="content-item__description"
        >
          <span
            className="content-item_title"
          >
            <b>
              Loading...
            </b>
          </span>
        </figcaption>
      </figure>
    }
  >
    <ContentItem
      date="2019-02-14"
      genres={
        Array [
          "Action",
          "Science Fiction",
        ]
      }
      img="https://image.tmdb.org/t/p/w500/6qmsupE0opYPIaBGe7T5D2FBzLs.jpg"
      key="320288"
      overview="Gathered together by Professor Charles Xavier to protect a world that fears and hates them, the X-Men had fought many battles, been on adventures that spanned galaxies, grappled enemies of limitless might, but none of this could prepare them for the most shocking struggle they would ever face. One of their own members, Jean Grey, has gained power beyond all comprehension, and that power has corrupted her absolutely! Now, they must decide if the life of the woman they cherish is worth the existence of the entire universe!"
      title="X-Men: Dark Phoenix"
      updateFilmPanel={[Function]}
    />
  </ErrorBoundary>
</section>
`;

exports[`ContentArea renders film panel if there is current items 1`] = `
<section
  className="content-container"
>
  <FilmPanel
    genres={
      Array [
        "Romance",
        "Drama",
      ]
    }
    overview="People who are on fishing boats in a secluded countryside wake up to their deepest desires.  Money, sex, power ... In the uninhabited desert where there is endless desire, it turns "
    title="Covet: The Island of Desire"
  />
  <EmptyContent />
</section>
`;

exports[`ContentArea renders message if there is no content in response 1`] = `
<section
  className="content-container"
>
  <EmptyContent />
</section>
`;
